# tmc_justina_docker

./: .gitignore  README.md  docker-compose.yml  pull-images.sh  set_libs.sh  task1_obj_reset.sh
devel/lib/act_pln/: rips
devel/lib/arms_control/: la_control_node  ra_control_node
devel/lib/env_des/: environment_description_node
devel/lib/head_control/: head_control_node
devel/lib/ik_geometric/: ik_geometric_node
devel/lib/knowledge/: ltm_node
devel/lib/knowledge_representation/: kdb_node
devel/lib/manip_pln/: manip_pln_node
devel/lib/path_calculator/: path_calculator_node
devel/lib/pkgconfig/: act_pln.pc  arms_control.pc  env_des.pc  head_control.pc  ik_geometric.pc  knowledge.pc  knowledge_representation.pc  manip_pln.pc  path_calculator.pc  potential_fields.pc  primer_intento.pc  simple_move.pc  surge_et_ambula.pc
devel/lib/potential_fields/: potential_fields_node
devel/lib/simple_move/: simple_move_node
devel/share/act_pln/cmake/: act_plnConfig.cmake
devel/share/arms_control/cmake/: arms_controlConfig.cmake
devel/share/env_des/cmake/: env_desConfig.cmake
devel/share/head_control/cmake/: head_controlConfig.cmake
devel/share/ik_geometric/cmake/: ik_geometricConfig.cmake
devel/share/knowledge/cmake/: knowledge-msg-paths.cmake  knowledgeConfig.cmake
devel/share/knowledge_representation/cmake/: knowledge_representationConfig.cmake
devel/share/manip_pln/cmake/: manip_plnConfig.cmake
devel/share/path_calculator/cmake/: path_calculatorConfig.cmake
devel/share/potential_fields/cmake/: potential_fieldsConfig.cmake
devel/share/primer_intento/cmake/: primer_intentoConfig.cmake
devel/share/roseus/ros/knowledge/: manifest.l
devel/share/roseus/ros/knowledge_representation/: manifest.l
devel/share/simple_move/cmake/: simple_moveConfig.cmake
devel/share/surge_et_ambula/cmake/: surge_et_ambulaConfig.cmake
dockerfile/: Dockerfile  entrypoint.sh  supervisord.conf
dockerfile/catkin_ws/src/hardware/arms/: CMakeLists.txt
dockerfile/catkin_ws/src/hardware/arms/src/: left_arm_real_simul.cpp  right_arm_real_simul.cpp
dockerfile/catkin_ws/src/justina_plugins/: CMakeLists.txt
dockerfile/catkin_ws/src/tmc_control_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
dockerfile/catkin_ws/src/tmc_control_msgs/action/: GripperApplyEffort.action
dockerfile/catkin_ws/src/tmc_control_msgs/msg/: ExxxDriveMode.msg  JointExxxDriveMode.msg  OverloadJointState.msg  ServoParam.msg  ServoState.msg
dockerfile/catkin_ws/src/tmc_control_msgs/srv/: ChangeExxxDriveMode.srv  InitActuatorEncorder.srv  ReadParameters.srv  SetBumperMode.srv  WriteParameters.srv
src/manipulation/arms_control/: CMakeLists.txt
src/manipulation/head_control/: CMakeLists.txt
src/navigation/obs_avoidance/potential_fields/: CMakeLists.txt
src/planning/act_pln/: CMakeLists.txt
src/planning/act_pln/src/: go_and_get.cpp  rips.cpp  task_1.cpp  task_2.cpp
src/planning/knowledge/: CMakeLists.txt
src/planning/knowledge/hardware/: base.urdf  hsrb.urdf
src/planning/knowledge/navigation/: known_delimitation_map_prueba.txt  known_locations_pre_RC_2021.txt  known_locations_pre_sydney.txt
src/surge_et_ambula/launch/: justina_gazebo.launch  justina_hardware_gazebo.launch  justina_knowledge.launch  justina_navigation.launch  justina_objects.launch  mapping_gazebo.launch  score.launch  simple_move.launch  task1_obj_spawn.launch  train_objects.launch
(+83 files in other folders)
