<?xml version="1.0"?>
<package>
  <name>tmc_control_msgs</name>
  <version>1.0.0</version>
  <description>The msgs for control some hardware.</description>

  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <author>Akiyoshi Ochiai</author>
  <author>Keisuke Takeshita</author>
  <author>Kiyohiro Sogen</author>
  <author>Koji Terada</author>
  <author>Koki Kataoka</author>
  <author>Tamaki Nishino</author>
  <author>Yusuke Ota</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>
  </export>
</package>
